--- a/project1/src/main/resources/application-dev.yml
+++ b/project1/src/main/resources/application-dev.yml
@@ -9,4 +9,4 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     defer-datasource-initialization: true
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
