--- a/project1/pom.xml
+++ b/project1/pom.xml
@@ -51,6 +51,31 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt</artifactId>
+		    <version>0.9.1</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>javax.xml.bind</groupId>
+		    <artifactId>jaxb-api</artifactId>
+		    <version>2.3.1</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>net.logstash.logback</groupId>
+		    <artifactId>logstash-logback-encoder</artifactId>
+		    <version>7.0.1</version>
+		    <!-- Use runtime scope if the project does not have any compile-time usage of logstash-logback-encoder,
+		         such as usage of StructuredArguments/Markers or implementations such as
+		         JsonProvider, AppenderListener, JsonFactoryDecorator, JsonGeneratorDecorator, etc
+		    <scope>runtime</scope>
+		    -->
+		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
