--- a/project1/promtail/promtail-docker-config.yml
+++ b/project1/promtail/promtail-docker-config.yml
@@ -15,7 +15,7 @@ scrape_configs:
           - localhost
         labels:
           job: chip-shop
-          __path__: /var/log/application.log
+          __path__: /var/logs/application.log
     pipeline_stages:
       - json:
           expressions:
